restore dni consult
